Revision history for Perl extension Class::C3.

0.31 - 2016-04-19
    - update bundled ExtUtils::HasCompiler to 0.013 to fix possible false
      negative (RT#113635)

0.30 - 2015-10-19
    - include ExtUtils::HasCompiler in dist as intended so it doesn't need to
      be installed

0.29 - 2015-10-18
    - Update compiler detection to use ExtUtils::HasCompiler

0.28 - 2015-04-14
    - Change link to Dylan paper to use archive.org, as the original link has
      gone offline (RT#99756).

0.27 - 2014-08-16
    - declare minimum perl version of 5.6 in metadata

0.26 Tue, Mar 4, 2104
    - Fix bug in Makefile.PL when ExtUtils::CBuilder not available

0.25 Thu, July 4, 2013
    - Drop compatibility from 5.6.2 to 5.6.0
    - Pod typo fixes (RT#77453, RT#85357)
    - Only ask for Devel::Hide on perls where it will be actually used
      (RT#81106)
    - Fix SYNOPSIS to actually be executable (RT#78327)

0.24 Sat, May 12, 2012
    - Require Class::C3::XS on 5.8 perls if a working compiler is found

0.23 Sat, Jun 19, 2010
    - Fix various documentation problems (Martin Becker).

0.22 Fri, Jan 29, 2010
    - Add note that people should be using MRO::Compat rather than
      Class::C3 directly.

0.21 Wed, Mar 25, 2009
    - Remove fake Build.PL. Module::Install doesn't support that anymore.
      (Florian Ragwitz)
    - Stop using auto_instal in Makefile.PL. Its use is strongly discouraged.
      (Closes RT#38051, RT#44541) (Simon Bertrang)

0.20 Mon, Dec 8, 2008
    - Prevent redefined warnings when Class::C3 is loaded explicitly after
      MRO::Compat has been loaded. Also add tests for this.

0.19 Mon, Jun 4, 2007
    - Added new goto tests, bumped XS version req

0.18 Sat, May 12, 2007
    - Just bumped XS version requirement

0.17 Tues, May 8, 2007
    - Remove Build.PL from the distribution

0.16 Thurs, May 3, 2007
    - Converted to Module::Install
    - Supports optional Class::C3::XS
    - Supports optional perl 5.9.5+ mro code